fix(web): dark scrollbar color on darkmode

--- a/packages/openland-web/static/css/x.css
+++ b/packages/openland-web/static/css/x.css
@@ -10,9 +10,11 @@
     text-rendering: auto;
 }
 
-html {
+html, body {
     background-color: var(--backgroundPrimary);
+}
 
+html {
     /* start interactive colors */
 
     --transparent: rgba(255, 255, 255, 0);
